--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "chalk": "^5.6.2",
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "prettier": "^3.6.2"
   },
   "scripts": {
     "start-server": "nodemon server.js"
